--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  cursor: url('assets/soccer.png') 32 32, auto;
+  /* cursor: url('assets/soccer.png') 32 32, auto; */
   overflow-x: hidden;
 }
 
@@ -39,8 +39,6 @@ html, body {
   margin-bottom: 0;
   font-size: 90px;
 }
-
-
 
 .subtitle {
   color: black;
